changed id in about.html after validating file

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <li>Fun to be around</li>
     </ul>
 
-    <h2 id="Strengths">Weaknesses</h2>
+    <h2 id="Weaknesses">Weaknesses</h2>
     <ul class="weakness">
         <li>Working too hard</li>
         <li>Bad at grilling food</li>
