--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
     </header>
     <nav class="menu">
         <ul>
-          <li><a href="#">Blogs</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="index.html">Blogs</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
 
