HTML Form and Table Lab

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
     <header>
         <h1>Tyler's Website</h1>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Blogs</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav class="menu">
-        <ul>
-            <li><a href="index.html">Blogs</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-    </nav>
 
     <h1 id="Posts" class="section-heading">Blog Posts:</h1>
     <h2 id="Post1">Post 1:</h2>
@@ -51,6 +52,43 @@
         condensed milk, and crushed walnuts. Once the shrimp are done, I let them cool for a few minutes and then toss
         them in the sauce mixture, giving them an even coating. I repeat this process for the second batch of shrimp as
         well. Typically, I serve the shrimp with a white rice. All done and delicious! </p>
+
+    <table>
+        <tr>
+            <th>    Step Number</th>
+            <th>    Ingredients at step</th>
+        </tr>        
+        <tr>
+            <td>1</td>
+            <td>    Shrimp To Dethaw</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>    Vegtable Oil</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>    Salt, Pepper, Cornstarch</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Honey, Mayo, Sesame Oil, Brown Sugar, Conensed Milk, Walnuts</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>    Rice</td>
+        </tr>
+    </table>
+
+
+    <section>
+        <form>
+            <label>Sign up for our Newsletter!
+                <input type="text">
+                <button>Subscribe</button>
+            </label>
+        </form>
+    </section>
 </body>
 
 </html>
