--- a/about.html
+++ b/about.html
@@ -11,13 +11,15 @@
 <body>
     <header>
         <h1>Tyler's Website</h1>
+   
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Blogs</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav class="menu">
-        <ul>
-          <li><a href="index.html">Blogs</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-      </nav>
 
 <h1 id="Greetings" class="section-heading">Welcome to my about page!</h1>
 
