Validation for HTML changes

--- a/contact.html
+++ b/contact.html
@@ -22,25 +22,27 @@
     </header>
 
     <section>
+        <h2>Contact Information</h2>
         <form>
-            <label>Contact Name</label>
-                <label for= "Name">
+            <label>Name</label>
+                <label>
                     Name: Tyler Gyulveszi
                 </label>
         </form>
     </section>
     <section>
+        <h2>Email Address</h2>
         <form>
-            <label>Contact Information</label>
-                <label for="email">
+                <label>
                     Email: gyulves1@msu.edu
                 </label>
         </form>
     </section>
 
     <section>
+        <h2>Reasoning for Contact</h2>
         <form>
-            <label for="drop down menu">              
+            <label>              
                 <select name="Menu" id="dropdown">
                     <option value="">( Purpose of Contact )</option>
                     <option value="hello">Just Saying Hi!</option>
@@ -52,11 +54,12 @@
     </section>
 
         <section>
+            <h2>Additional Inquries</h2>
             <form >
                 Additional Comments or Questions:
                 <input type="text" id="textbox" name="box" required
                 minlength="0" maxlength="500" size="100">
-                <label for="button">
+                <label>
                     <button>Submit</button>
                 </label>
             </form>
