--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
 
 
     <section>
+        <h2>Sign Up</h2>
         <form>
+            <label><input type="text"></label>
             <label>Sign up for our Newsletter!
-                <input type="text">
+                
                 <button>Subscribe</button>
             </label>
         </form>
