Adding Media Querie to CSS for our pages

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     
 
 
-    <section>
+    <section class = "SignUpSec">
         <h2>Sign Up</h2>
         <form>
             <label><input type="text"></label>
